# mxgreeter

./: LICENSE  README.md  config.toml  mxgreeter.md  pyproject.toml
mxgreeter/: __init__.py  __main__.py  bot.py  cli.py
